--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <!--HEADER-->
     <header class="header-page">
@@ -38,7 +39,7 @@
           <li>
             <a
               target="_blank"
-              rel="noreferrer noopener"
+              rel="noreferrer noopener nofollow"
               href="https://www.instagram.com/"
               >Instagram</a
             >
@@ -46,7 +47,7 @@
           <li>
             <a
               target="_blank"
-              rel="noreferrer noopener"
+              rel="noreferrer noopener nofollow"
               href="https://www.youtube.com/"
               >Youtube</a
             >
@@ -54,9 +55,9 @@
         </ul>
       </div>
       <div>
-        <p class="sup-title">A hair salon for men in Kyiv</p>
+        <p class="hero-sup sup-text">A hair salon for men in Kyiv</p>
         <h1 class="hero-title">BarberShop</h1>
-        <p class="sub-text">
+        <p class="hero-sub sub-text">
           We are experts in trendy men’s haircuts. We work quickly, carefully
           and with style.
         </p>
@@ -65,6 +66,32 @@
           <li><a href="">Forward</a></li>
         </ul>
       </div>
+    </section>
+
+    <!--ABOUT-->
+    <section class="about">
+      <ul class="about-list list">
+        <li>
+          <img src="./images/barba.jpg" alt="Beard" width="270" height="445" />
+        </li>
+        <li>
+          <img src="./images/hair.jpg" alt="Hair" width="270" height="445" />
+        </li>
+      </ul>
+      <p class="about-sup sup-text">About</p>
+      <h2 class="secondary-title">Best Barbershop in your city</h2>
+      <p class="about-sub sub-text">
+        If you want to add more confidence to your image, you should definitely
+        visit us.
+      </p>
+      <p class="text">
+        We are a team that never stops at what has been achieved and are thirsty
+        for changes. And when you fall into the hands of our master, you will
+        never be the same again. We are a team that is always "on the same wave"
+        with clients. Therefore, we are always ready to improve everyone who
+        comes to us!
+      </p>
+      <button type="button" class="about-btn btn">Online-booking</button>
     </section>
   </body>
 </html>
