--- a/index.html
+++ b/index.html
@@ -94,4 +94,47 @@
       <button type="button" class="about-btn btn">Online-booking</button>
     </section>
   </body>
+
+  <!--PRICES-->
+  <section class="prices">
+    <p class="prices-sup sup-text">Spend your time with the best masters</p>
+    <h2 class="price-title secondary-title">Services and prices</h2>
+    <table class="prices-table sub-text">
+      <tr>
+        <td>Men’s haircut</td>
+        <td>from 300 uah.</td>
+      </tr>
+      <tr>
+        <td>Beard trim</td>
+        <td>from 300 uah.</td>
+      </tr>
+      <tr>
+        <td>Mustache trim</td>
+        <td>from 200 uah.</td>
+      </tr>
+      <tr>
+        <td>Straight razor shave</td>
+        <td>from 200 uah.</td>
+      </tr>
+    </table>
+    <table class="prices-table sub-text">
+      <tr>
+        <td>Trainee’s haircut</td>
+        <td>from 50 uah.</td>
+      </tr>
+      <tr>
+        <td>Haircut under the nozzle</td>
+        <td>from 200 uah.</td>
+      </tr>
+      <tr>
+        <td>Children’s haircut (0-12 y.o.)</td>
+        <td>from 300 uah.</td>
+      </tr>
+      <tr>
+        <td>Camouflage of gray hair</td>
+        <td>from 200 uah.</td>
+      </tr>
+    </table>
+    <button type="button" class="about-btn btn">Online-booking</button>
+  </section>
 </html>
