All section till Contacts

--- a/index.html
+++ b/index.html
@@ -137,4 +137,211 @@
     </table>
     <button type="button" class="about-btn btn">Online-booking</button>
   </section>
+
+  <!--WHY WE-->
+  <section class="why">
+    <ul class="why-list list">
+      <li>
+        <p class="number">600</p>
+        <p class="descrip">Satisfied customers per day</p>
+      </li>
+      <li>
+        <p class="number">50</p>
+        <p class="descrip">Awards for excellent service</p>
+      </li>
+      <li>
+        <p class="number">20</p>
+        <p class="descrip">Kyiv’s best barbers</p>
+      </li>
+      <li>
+        <p class="number">100</p>
+        <p class="descrip">Gifts for regular customers</p>
+      </li>
+    </ul>
+    <p class="why-sup sup-text">Old traditional school</p>
+    <h2 class="secondary-title">¿Why people come to us?</h2>
+    <p class="why-sub sub-text">
+      Only good things are said about us. But it's better to see and feel 1 time
+      than read 10 times.
+    </p>
+  </section>
+
+  <!--TEAM-->
+  <section class="team">
+    <p class="team-sup sup-text">For true enjoyers of the atmosphere</p>
+    <h2 class="secondary-title">Our barbers</h2>
+    <ul class="list">
+      <li>
+        <img
+          src="./images/john.jpg"
+          alt="John Smith"
+          width="370"
+          height="346"
+        />
+        <h3 class="third-title">John Smith</h3>
+        <p class="team-desc">Extreme Barber</p>
+        <ul class="list">
+          <li>
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              rel="noreferrer noopener nofollow"
+              ><img src="./images/insta.svg" alt="Instagram"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="https://twitter.com/"
+              target="_blank"
+              rel="noreferrer noopener nofollow"
+              ><img src="./images/twitter.svg" alt="Twitter"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              rel="noreferrer noopener nofollow"
+              ><img src="./images/facebook.svg" alt="Facebook"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/"
+              target="_blank"
+              rel="noreferrer noopener nofollow"
+              ><img src="./images/linkedin.svg" alt="LinkedIn"
+            /></a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <img
+          src="./images/michele.jpg"
+          alt="Michele Doe"
+          width="370"
+          height="346"
+        />
+        <h3 class="third-title">Michele Doe</h3>
+        <p class="team-desc">Extreme Barber</p>
+        <ul class="list">
+          <li>
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              rel="noreferrer noopener nofollow"
+              ><img src="./images/insta.svg" alt="Instagram"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="https://twitter.com/"
+              target="_blank"
+              rel="noreferrer noopener nofollow"
+              ><img src="./images/twitter.svg" alt="Twitter"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              rel="noreferrer noopener nofollow"
+              ><img src="./images/facebook.svg" alt="Facebook"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/"
+              target="_blank"
+              rel="noreferrer noopener nofollow"
+              ><img src="./images/linkedin.svg" alt="LinkedIn"
+            /></a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <img
+          src="./images/alan.jpg"
+          alt="Alan Black"
+          width="370"
+          height="346"
+        />
+        <h3 class="third-title">Alan Black</h3>
+        <p class="team-desc">Extreme Barber</p>
+        <ul class="list">
+          <li>
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              rel="noreferrer noopener nofollow"
+              ><img src="./images/insta.svg" alt="Instagram"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="https://twitter.com/"
+              target="_blank"
+              rel="noreferrer noopener nofollow"
+              ><img src="./images/twitter.svg" alt="Twitter"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              rel="noreferrer noopener nofollow"
+              ><img src="./images/facebook.svg" alt="Facebook"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/"
+              target="_blank"
+              rel="noreferrer noopener nofollow"
+              ><img src="./images/linkedin.svg" alt="LinkedIn"
+            /></a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </section>
+
+  <!--PORTFOLIO-->
+  <section class="portfolio">
+    <p class="portf-sup sup-text">In Latin, "barba" means "beard"</p>
+    <ul class="list">
+      <li>
+        <img
+          src="./images/portf1.jpg"
+          alt="Portfolio photo 1"
+          width="270"
+          height="360"
+        />
+      </li>
+      <li>
+        <img
+          src="./images/portf2.jpg"
+          alt="Portfolio photo 2"
+          width="270"
+          height="360"
+        />
+      </li>
+      <li>
+        <img
+          src="./images/portf3.jpg"
+          alt="Portfolio photo 3"
+          width="270"
+          height="360"
+        />
+      </li>
+      <li>
+        <img
+          src="./images/portf4.jpg"
+          alt="Portfolio photo 4"
+          width="270"
+          height="360"
+        />
+      </li>
+    </ul>
+  </section>
 </html>
