--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
                 target="_blank"
                 rel="noreferrer noopener nofollow"
                 href="https://www.youtube.com/"
-                >Youtube</a
-              >
+                >Youtube</a>
             </li>
           </ul>
           <!-- </div> -->
@@ -386,16 +385,52 @@
       </div>
     </section>
 
-    <!-- CONTACTS -->
-    <section class="contacts">
+    <!-- BOOKING & CONTACTS -->
+    <section class="booking-contacts">
       <div class="contacts-cntnr container">
-        <h2 class="dark-title secondary-title">Online-booking</h2>
-        <button type="button" class="dark-btn btn">send</button>
-        <h2 class="dark-title secondary-title">Contacts</h2>
-
+        <div class="booking">
+          <h2 class="dark-title secondary-title">Online-booking</h2>
+          <button type="button" class="btn-send dark-btn btn">send</button> 
+        </div>
+        <div class="contacts">
+          <h2 class="dark-title secondary-title">Contacts</h2>
+          <address>
+            <ul class="address list">
+              <li><a class="address-adrs" target="_blank" rel="noreferrer noopener nofollow" href="">st. Vasilkivska, 7A
+  Kyiv, 08132</a></li>
+              <li><a href="tel:+380441111111" class="phone-contacts">+38 044 111 11 11</a></li>
+              <li><a href="mailto:barbershop@email.com" class="email">barbershop@email.com</a></li>
+            </ul></address>
+            <p class="work-hours">Working hours</p>
+            <p>Every day from 9:00 to 22:00</p>
+        </div>
       </div>
     </section>
   </main>
+
+  <!-- FOOTER -->
+  <footer>
+    <section class="footer">
+      <div class="footer-cntnr container">
+        <p>&copy; Copyright 2020</p>
+        <ul class="footer-list list">
+            <li class="">
+              <a
+                target="_blank"
+                rel="noreferrer noopener nofollow"
+                href="https://www.instagram.com/"
+                >Instagram</a
+              >
+            </li>
+            <li class="">
+              <a
+                target="_blank"
+                rel="noreferrer noopener nofollow"
+                href="https://www.youtube.com/"
+                >Youtube</a>
+      </div>
+    </section>
+  </footer> 
 
 
 </html>
