--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
     <header class="header-page">
       <div class="header-cntnr container">
         <nav class="menu-nav">
-          <a class="logo" href="./index.html"
-            ><img src="./images/logo.svg" alt="logo" width="69" height="55"
-          /></a>
+          <a class="logo" href="./index.html">
+            <svg class="logo-svg" width="69" height="55">
+              <use href="./images/sprite.svg#icon-logo"></use>
+            </svg>
+            </a>
           <ul class="menu list">
             <li class="menu-item"><a href="">About</a></li>
             <li class="menu-item"><a href="">Services and prices</a></li>
@@ -212,38 +214,46 @@
             <div class="team-content">
               <h3 class="third-title">John Smith</h3>
               <p class="team-desc">Extreme Barber</p>
-              <ul class="team-netlist list">
-                <li>
-                  <a
+              <ul class="team-net-list list">
+                <li class="team-net-item">
+                  <a class="team-net-link"
                     href="https://www.instagram.com/"
                     target="_blank"
                     rel="noreferrer noopener nofollow"
-                    ><img src="./images/insta.svg" alt="Instagram"
-                  /></a>
+                    ><svg class="net-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                </a>
                 </li>
-                <li>
-                  <a
+                <li class="team-net-item">
+                  <a class="team-net-link"
                     href="https://twitter.com/"
                     target="_blank"
                     rel="noreferrer noopener nofollow"
-                    ><img src="./images/twitter.svg" alt="Twitter"
-                  /></a>
+                    ><svg class="net-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                </a>
                 </li>
-                <li>
-                  <a
+                <li class="team-net-item">
+                  <a class="team-net-link"
                     href="https://www.facebook.com/"
                     target="_blank"
                     rel="noreferrer noopener nofollow"
-                    ><img src="./images/facebook.svg" alt="Facebook"
-                  /></a>
+                    ><svg class="net-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                   </a>
                 </li>
-                <li>
-                  <a
+                <li class="team-net-item">
+                  <a class="team-net-link"
                     href="https://www.linkedin.com/"
                     target="_blank"
                     rel="noreferrer noopener nofollow"
-                    ><img src="./images/linkedin.svg" alt="LinkedIn"
-                  /></a>
+                    ><svg class="net-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
                 </li>
               </ul>
             </div>
@@ -258,38 +268,46 @@
             <div class="team-content">
               <h3 class="third-title">Michele Doe</h3>
               <p class="team-desc">Extreme Barber</p>
-              <ul class="team-netlist list">
-                <li>
-                  <a
+              <ul class="team-net-list list">
+                <li class="team-net-item">
+                  <a class="team-net-link"
                     href="https://www.instagram.com/"
                     target="_blank"
                     rel="noreferrer noopener nofollow"
-                    ><img src="./images/insta.svg" alt="Instagram"
-                  /></a>
+                    ><svg class="net-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                </a>
                 </li>
-                <li>
-                  <a
+                <li class="team-net-item">
+                  <a class="team-net-link"
                     href="https://twitter.com/"
                     target="_blank"
                     rel="noreferrer noopener nofollow"
-                    ><img src="./images/twitter.svg" alt="Twitter"
-                  /></a>
+                    ><svg class="net-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                </a>
                 </li>
-                <li>
-                  <a
+                <li class="team-net-item">
+                  <a class="team-net-link"
                     href="https://www.facebook.com/"
                     target="_blank"
                     rel="noreferrer noopener nofollow"
-                    ><img src="./images/facebook.svg" alt="Facebook"
-                  /></a>
+                    ><svg class="net-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                   </a>
                 </li>
-                <li>
-                  <a
+                <li class="team-net-item">
+                  <a class="team-net-link"
                     href="https://www.linkedin.com/"
                     target="_blank"
                     rel="noreferrer noopener nofollow"
-                    ><img src="./images/linkedin.svg" alt="LinkedIn"
-                  /></a>
+                    ><svg class="net-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
                 </li>
               </ul>
             </div>
@@ -304,38 +322,46 @@
             <div class="team-content">
               <h3 class="third-title">Alan Black</h3>
               <p class="team-desc">Extreme Barber</p>
-              <ul class="team-netlist list">
-                <li>
-                  <a
+              <ul class="team-net-list list">
+                <li class="team-net-item">
+                  <a class="team-net-link"
                     href="https://www.instagram.com/"
                     target="_blank"
                     rel="noreferrer noopener nofollow"
-                    ><img src="./images/insta.svg" alt="Instagram"
-                  /></a>
+                    ><svg class="net-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                </a>
                 </li>
-                <li>
-                  <a
+                <li class="team-net-item">
+                  <a class="team-net-link"
                     href="https://twitter.com/"
                     target="_blank"
                     rel="noreferrer noopener nofollow"
-                    ><img src="./images/twitter.svg" alt="Twitter"
-                  /></a>
+                    ><svg class="net-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                </a>
                 </li>
-                <li>
-                  <a
+                <li class="team-net-item">
+                  <a class="team-net-link"
                     href="https://www.facebook.com/"
                     target="_blank"
                     rel="noreferrer noopener nofollow"
-                    ><img src="./images/facebook.svg" alt="Facebook"
-                  /></a>
+                    ><svg class="net-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                   </a>
                 </li>
-                <li>
-                  <a
+                <li class="team-net-item">
+                  <a class="team-net-link"
                     href="https://www.linkedin.com/"
                     target="_blank"
                     rel="noreferrer noopener nofollow"
-                    ><img src="./images/linkedin.svg" alt="LinkedIn"
-                  /></a>
+                    ><svg class="net-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
                 </li>
               </ul>
             </div>
@@ -412,7 +438,12 @@
   <footer>
     <section class="footer">
       <div class="footer-cntnr container">
-        <p>&copy; Copyright 2020</p>
+        <div class="ftr-cpr">
+          <svg class="ftr-icon" width="12" height="12">
+            <use href="./images/sprite.svg#icon-copy"></use>
+          </svg>
+          <p>Copyright 2020</p>
+        </div >
         <ul class="footer-list list">
             <li class="">
               <a
