--- a/index.html
+++ b/index.html
@@ -47,13 +47,12 @@
       <!--HERO-->
       <section class="hero">
         <div class="hero-cntnr container">
-          <!-- <div class="rot"> -->
           <ul class="net-menu list">
             <li class="net-item">
               <a
                 target="_blank"
                 rel="noreferrer noopener nofollow"
-                href="https://www.instagram.com/"
+                href=""
                 >Instagram</a
               >
             </li>
@@ -61,11 +60,10 @@
               <a
                 target="_blank"
                 rel="noreferrer noopener nofollow"
-                href="https://www.youtube.com/"
+                href=""
                 >Youtube</a>
             </li>
           </ul>
-          <!-- </div> -->
           <div class="ttl-btn-cntnr">
             <div class="ttl-cntnr">
               <p class="hero-sup sup-text">A hair salon for men in Kyiv</p>
@@ -422,10 +420,19 @@
           <h2 class="dark-title secondary-title">Contacts</h2>
           <address>
             <ul class="address list">
-              <li><a class="address-adrs" target="_blank" rel="noreferrer noopener nofollow" href="">st. Vasilkivska, 7A
+              <li class="adrs-item">
+                <svg class="adrs-swg" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-map-pin"></use>
+                </svg>
+                <a class="address-adrs" target="_blank" rel="noreferrer noopener nofollow" href="">st. Vasilkivska, 7A
   Kyiv, 08132</a></li>
-              <li><a href="tel:+380441111111" class="phone-contacts">+38 044 111 11 11</a></li>
-              <li><a href="mailto:barbershop@email.com" class="email">barbershop@email.com</a></li>
+              <li class="adrs-item">
+                <svg class="adrs-swg" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-phone"></use>
+                </svg><a href="tel:+380441111111" class="phone-contacts">+38 044 111 11 11</a></li>
+              <li class="adrs-item"><svg class="adrs-swg" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-mail"></use>
+                </svg><a href="mailto:barbershop@email.com" class="email">barbershop@email.com</a></li>
             </ul></address>
             <p class="work-hours">Working hours</p>
             <p>Every day from 9:00 to 22:00</p>
@@ -445,19 +452,19 @@
           <p>Copyright 2020</p>
         </div >
         <ul class="footer-list list">
-            <li class="">
+            <li class="ftr-item">
               <a
                 target="_blank"
                 rel="noreferrer noopener nofollow"
-                href="https://www.instagram.com/"
+                href=""
                 >Instagram</a
               >
             </li>
-            <li class="">
+            <li class="ftr-item">
               <a
                 target="_blank"
                 rel="noreferrer noopener nofollow"
-                href="https://www.youtube.com/"
+                href=""
                 >Youtube</a>
       </div>
     </section>
