--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </ul>
         </nav>
         <a href="tel:+380441111111" class="phone">+38 044 111 11 11</a>
-        <button type="button" class="btn">Online-booking</button>
+        <button type="button" class="header-btn btn">Online-booking</button>
       </div>
     </header>
 
@@ -47,23 +47,25 @@
       <!--HERO-->
       <section class="hero">
         <div class="hero-cntnr container">
-          <ul class="net-menu list">
-            <li class="net-item">
-              <a
-                target="_blank"
-                rel="noreferrer noopener nofollow"
-                href=""
-                >Instagram</a
-              >
-            </li>
-            <li class="net-item">
-              <a
-                target="_blank"
-                rel="noreferrer noopener nofollow"
-                href=""
-                >Youtube</a>
-            </li>
-          </ul>
+          <div class="hero-net-menu-overlay">
+            <ul class="hero-net-menu net-menu list">
+              <li class="net-item">
+                <a
+                  target="_blank"
+                  rel="noreferrer noopener nofollow"
+                  href=""
+                  >Instagram</a
+                >
+              </li>
+              <li class="net-item">
+                <a
+                  target="_blank"
+                  rel="noreferrer noopener nofollow"
+                  href=""
+                  >Youtube</a>
+              </li>
+            </ul>
+          </div >
           <div class="ttl-btn-cntnr">
             <div class="ttl-cntnr">
               <p class="hero-sup sup-text">A hair salon for men in Kyiv</p>
@@ -71,12 +73,13 @@
               <p class="hero-sub sub-text">
                 We are experts in trendy men’s haircuts. We work quickly,
                 carefully and with style.
-              </p>
-              <ul class="back-and-forward list">
-                <li class="bf-item"><a href="">Back</a></li>
-                <li class="bf-item"><a href="">Forward</a></li>
-              </ul>
-            </div>
+              </p></div>
+              <div class="btn-cntnr">
+                <ul class="back-and-forward list">
+                  <li class="bf-item"><a href="" class="bf-link">Back</a></li>
+                  <li class="bf-item"><a href="" class="bf-link">Forward</a></li>
+                </ul>
+              </div >
           </div>
         </div>
       </section>
@@ -170,6 +173,7 @@
         <ul class="why-list list">
           <li>
             <p class="number">600</p>
+            
             <p class="descrip">Satisfied customers per day</p>
           </li>
           <li>
