--- a/index.html
+++ b/index.html
@@ -38,14 +38,55 @@
             <li class="menu-item"><a href="">Contacts</a></li>
           </ul>
         </nav>
+        <button type="button" class="menu-btn js-open-menu" aria-label="menu">
+          <span class="visually-hidden">Menu</span>
+          <svg class="menu-icon" width="40" height="40">
+            <use href="./images/spritewitoutcolor.svg#icon-menu_40px"></use>
+          </svg>
+        </button>
         <a href="tel:+380441111111" class="phone">+38 044 111 11 11</a>
         <button type="button" class="header-btn btn" data-modal-open>Online-booking</button>
+      </div>
+
+      <div class="mobile-menu js-menu-container">
+        <div class="mobile-menu-wrap">
+          <button type="button" class="mobile-btn-cls js-close-menu">
+        <svg width="40" height="40">
+          <use href="./images/spritewitoutcolor.svg#icon-close_40px"></use>
+        </svg>
+      </button>
+          <ul class="mobile-menu-list list">
+            <li class="mobile-menu-item"><a href="">About</a></li>
+            <li class="mobile-menu-item"><a href="">Services and prices</a></li>
+            <li class="mobile-menu-item"><a href="">Barbers</a></li>
+            <li class="mobile-menu-item"><a href="">Contacts</a></li>
+          </ul>
+          <a href="tel:+380441111111" class="mobile-phone">+38 044 111 11 11</a>
+        <button type="button" class="mobile-header-btn btn" data-modal-open>Online-booking</button>
+      <ul class="mobile-net-menu net-menu list">
+              <li class="mobile-net-item">
+                <a
+                  target="_blank"
+                  rel="noreferrer noopener nofollow"
+                  href=""
+                  >Instagram</a
+                >
+              </li>
+              <li class="mobile-net-item">
+                <a
+                  target="_blank"
+                  rel="noreferrer noopener nofollow"
+                  href=""
+                  >Youtube</a>
+              </li>
+            </ul>
+        </div>
       </div>
     </header>
 
     <main>
       <!--HERO-->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="hero-cntnr container">
           <div class="hero-net-menu-overlay">
             <ul class="hero-net-menu net-menu list">
@@ -82,10 +123,10 @@
               </div >
           </div>
         </div>
-      </section>
+      </section> -->
   
       <!--ABOUT-->
-      <section class="about">
+      <!-- <section class="about">
         <div class="about-cntnr container">
           <ul class="about-list list">
             <li>
@@ -117,11 +158,11 @@
             <button type="button" class="about-btn btn">Online-booking</button>
           </div>
         </div>
-      </section>
+      </section>-->
     
   
     <!--PRICES-->
-    <section class="prices">
+    <!-- <section class="prices">
       <div class="container">
         <p class="prices-sup sup-text">Spend your time with the best masters</p>
         <h2 class="dark-title secondary-title">Services and prices</h2>
@@ -165,10 +206,10 @@
         </div>
         <button type="button" class="dark-btn btn">Online-booking</button>
       </div>
-    </section>
+    </section> --> 
   
     <!--WHY WE-->
-    <section class="why">
+    <!-- <section class="why">
       <div class="why-cntnr container">
         <ul class="why-list list">
           <li>
@@ -198,10 +239,10 @@
           </p>
         </div>
       </div>
-    </section>
+    </section> -->
   
     <!--TEAM-->
-    <section class="team">
+    <!-- <section class="team">
       <div class="container">
         <p class="team-sup sup-text">For true enjoyers of the atmosphere</p>
         <h2 class="team-ttl secondary-title">Our barbers</h2>
@@ -370,10 +411,10 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
   
     <!--PORTFOLIO-->
-    <section class="portfolio">
+    <!-- <section class="portfolio">
       <div class="container">
         <p class="portf-sup sup-text">In Latin, "barba" means "beard"</p>
         <ul class="portf-list list">
@@ -411,10 +452,10 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
     <!-- BOOKING & CONTACTS -->
-    <section class="booking-contacts">
+    <!-- <section class="booking-contacts">
       <div class="contacts-cntnr container">
         <div class="booking">
           <h2 class="dark-title secondary-title">Online-booking</h2>
@@ -454,10 +495,10 @@
         </div>
       </div>
     </section>
-  </main>
+  </main> -->
 
   <!-- FOOTER -->
-  <footer>
+  <!-- <footer>
     <section class="footer">
       <div class="footer-cntnr container">
         <div class="ftr-cpr">
@@ -483,10 +524,10 @@
                 >Youtube</a>
       </div>
     </section>
-  </footer> 
+  </footer>  -->
 
   <!-- Modal window -->
-  <div class="backdrop is-hidden" data-modal>
+  <!-- <div class="backdrop is-hidden" data-modal>
     <div class="modal">
       <button type="button" class="btn-cls" data-modal-close>
         <svg width="8" height="8">
@@ -510,7 +551,8 @@
     </div>
   </div>
 
-  <script src="./js/modal.js"></script>
+  <script src="./js/modal.js"></script> -->
+  <script src="./js/mobile-menu.js"></script>
   </body>
 
 
