--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
             <use href="./images/spritewitoutcolor.svg#icon-menu_40px"></use>
           </svg>
         </button>
-        <a href="tel:+380441111111" class="phone">+38 044 111 11 11</a>
-        <button type="button" class="header-btn btn" data-modal-open>Online-booking</button>
-      </div>
+        <div class="wrap-tel-btn">
+          <a href="tel:+380441111111" class="phone">+38 044 111 11 11</a>
+          <button type="button" class="header-btn btn" data-modal-open>Online-booking</button>
+        
+        </div ></div>
 
       <div class="mobile-menu js-menu-container">
         <div class="mobile-menu-wrap">
@@ -86,7 +88,7 @@
 
     <main>
       <!--HERO-->
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="hero-cntnr container">
           <div class="hero-net-menu-overlay">
             <ul class="hero-net-menu net-menu list">
@@ -123,7 +125,7 @@
               </div >
           </div>
         </div>
-      </section> -->
+      </section>
   
       <!--ABOUT-->
       <!-- <section class="about">
