--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               </li>
             </ul>
           </div >
-          <div class="ttl-btn-cntnr">
+          <div class="ttl-hero-cntnr">
             <div class="ttl-cntnr">
               <p class="hero-sup sup-text">A hair salon for men in Kyiv</p>
               <h1 class="hero-title">BarberShop</h1>
