--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
                     <use href="./images/sprite.svg#icon-map-pin"></use>
                   </svg>
                   <a
-                    class="address-adrs"
+                    class="address-adrs cntct-txt"
                     target="_blank"
                     rel="noreferrer noopener nofollow"
                     href=""
@@ -752,21 +752,21 @@
                 <li class="adrs-item">
                   <svg class="adrs-swg" width="24" height="24">
                     <use href="./images/sprite.svg#icon-phone"></use></svg
-                  ><a href="tel:+380441111111" class="phone-contacts"
+                  ><a href="tel:+380441111111" class="cntct-txt phone-contacts"
                     >+38 044 111 11 11</a
                   >
                 </li>
                 <li class="adrs-item">
                   <svg class="adrs-swg" width="24" height="24">
                     <use href="./images/sprite.svg#icon-mail"></use></svg
-                  ><a href="mailto:barbershop@email.com" class="email"
+                  ><a href="mailto:barbershop@email.com" class="cntct-txt email"
                     >barbershop@email.com</a
                   >
                 </li>
               </ul>
             </address>
             <p class="work-hours">Working hours</p>
-            <p>Every day from 9:00 to 22:00</p>
+            <p class="cntct-txt">Every day from 9:00 to 22:00</p>
           </div>
         </div>
       </section>
