Full witjout small phones

--- a/index.html
+++ b/index.html
@@ -734,46 +734,47 @@
             </form>
           </div>
           <div class="contacts">
-            <h2 class="dark-title secondary-title">Contacts</h2>
-            <address>
-              <ul class="address list">
-                <li class="adrs-item">
-                  <svg class="adrs-swg" width="24" height="24">
-                    <use href="./images/sprite.svg#icon-map-pin"></use>
-                  </svg>
-                  <a
-                    class="address-adrs cntct-txt"
-                    target="_blank"
-                    rel="noreferrer noopener nofollow"
-                    href=""
-                    >st. Vasilkivska, 7A Kyiv, 08132</a
-                  >
-                </li>
-                <li class="adrs-item">
-                  <svg class="adrs-swg" width="24" height="24">
-                    <use href="./images/sprite.svg#icon-phone"></use></svg
-                  ><a href="tel:+380441111111" class="cntct-txt phone-contacts"
-                    >+38 044 111 11 11</a
-                  >
-                </li>
-                <li class="adrs-item">
-                  <svg class="adrs-swg" width="24" height="24">
-                    <use href="./images/sprite.svg#icon-mail"></use></svg
-                  ><a href="mailto:barbershop@email.com" class="cntct-txt email"
-                    >barbershop@email.com</a
-                  >
-                </li>
-              </ul>
-            </address>
-            <p class="work-hours">Working hours</p>
-            <p class="cntct-txt">Every day from 9:00 to 22:00</p>
-          </div>
+            <h2 class="dark-title secondary-title cntct-ttl">Contacts</h2>
+            <div class="address-time-wrap">
+              <address>
+                <ul class="address list">
+                  <li class="adrs-item">
+                    <svg class="adrs-swg" width="24" height="24">
+                      <use href="./images/sprite.svg#icon-map-pin"></use>
+                    </svg>
+                    <a
+                      class="address-adrs cntct-txt"
+                      target="_blank"
+                      rel="noreferrer noopener nofollow"
+                      href=""
+                      >st. Vasilkivska, 7A Kyiv, 08132</a
+                    >
+                  </li>
+                  <li class="adrs-item">
+                    <svg class="adrs-swg" width="24" height="24">
+                      <use href="./images/sprite.svg#icon-phone"></use>
+                    </svg>
+                    <a href="tel:+380441111111" class="cntct-txt phone-contacts">+38 044 111 11 11</a>
+                  </li>
+                  <li class="adrs-item">
+                    <svg class="adrs-swg" width="24" height="24">
+                      <use href="./images/sprite.svg#icon-mail"></use></svg>
+                      <a href="mailto:barbershop@email.com" class="cntct-txt email"
+                      >barbershop@email.com</a>
+                  </li>
+                </ul>
+              </address>
+              <div>
+                <p class="work-hours">Working hours</p>
+                <p class="cntct-txt">Every day from 9:00 to 22:00</p>
+              </div>
+            </div>
         </div>
       </section>
     </main>
 
     <!-- FOOTER -->
-    <!-- <footer>
+    <footer>
     <section class="footer">
       <div class="footer-cntnr container">
         <div class="ftr-cpr">
@@ -799,10 +800,10 @@
                 >Youtube</a>
       </div>
     </section>
-  </footer>  -->
+  </footer> 
 
     <!-- Modal window -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
     <div class="modal">
       <button type="button" class="btn-cls" data-modal-close>
         <svg width="8" height="8">
@@ -826,7 +827,7 @@
     </div>
   </div>
 
-  <script src="./js/modal.js"></script> -->
+  <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
